add previous turn endpoint
